# routes/api.php
@@ -3,13 +3,13 @@
 use App\Http\Controllers\AuthController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\toolsController;
-
+/*
 Route::prefix('auth')->middleware('jwt.auth')->group( function(){
     Route::post('tools/', [toolsController::class, 'store']);
-    Route::delete('/tools/{id}', [toolsController::class, 'destroy']);
     Route::delete('/tools/{id}', [toolsController::class, 'refresh']);
     
 });
+*/
 
 Route::group([
     'middleware' => 'api',
@@ -23,6 +23,8 @@ Route::group([
 });
 
 Route::get('/tools', [toolsController::class, 'index']);
+Route::post('/tools', [toolsController::class, 'store']);
+Route::delete('/tools/{id}', [toolsController::class, 'destroy']);
 Route::post('/register',[AuthController::class,'register']);
 Route::get('/tools/{id}', [toolsController::class, 'show']);
 
